--- a/code/htdocs/index.html
+++ b/code/htdocs/index.html
@@ -3,6 +3,11 @@
 	<title>Solarstrom Eigenverbrauch Optimierung</title>
 	<script type="text/javascript">
 		const wochentage = ['So', 'Mo', 'Di', 'Mi', 'Do', 'Fr', 'Sa'];
+		var ist_prod = false;
+		if(document.location.pathname == '/') {
+			ist_prod = true;
+		}
+		
 		function refresh() {
 			_lies_daten();
 			
@@ -111,7 +116,11 @@
 			xhr.ontimeout = function(args) {
 				_zaehle_fehler(true);
 			}
-			xhr.open('GET', '/daten.json?time=' + Math.floor(new Date().getTime() / 1000), true);
+			xhr.open(
+				'GET',
+				'/daten.json?time=' + Math.floor(new Date().getTime() / 1000) + (ist_prod ? '&ist_prod=1' : ''),
+				true
+			);
 			xhr.timeout = 30 * 1000;
 			xhr.send();
 		}
@@ -221,6 +230,10 @@
 			height: 0.5rem;
 			background-color: #CCC;
 		}
+		/* TODO So kann man Sonnenstunden und BatterieUeberlauf unterscheiden */
+		/*#wetter_stunden tbody tr:nth-child(1) td:nth-child(1) {*/
+		/*	background-color: #777;*/
+		/*}*/
 			#wetter_stunden tbody td {
 				width: 8%;
 			}
