--- a/code/htdocs/index.html
+++ b/code/htdocs/index.html
@@ -21,12 +21,12 @@
 		}
 		function _setze_daten_ein(daten) {
 			_setze_wetter_stunden_label(daten);
-			_setze_wetter_stunden(daten);
+			_setze_wetter_daten(daten['solarstrahlung_stunden_in_prozent'], 'wetter_stunden');
 			_setze_wetter_tage_label(daten);
-			_setze_wetter_tage(daten);
+			_setze_wetter_daten(daten['solarstrahlung_tage_in_prozent'], 'wetter_tage');
 			_setze_elektrische_daten(daten);
 			_setze_verbrauchshinweise(daten);
-			
+
 			document.getElementById('solaranteil_in_prozent_string1').innerHTML = daten['solaranteil_in_prozent_string1'];
 			document.getElementById('solaranteil_in_prozent_string2').innerHTML = daten['solaranteil_in_prozent_string2'];
 		}
@@ -48,7 +48,7 @@
 				}
 				leistung = leistung.replace(/^([\-+]?\d+)(\d)$/, "$1.$2");
 				ui.getElementsByClassName('leistung')[0].innerHTML = leistung;
-				
+
 				ui.getElementsByClassName('start')[0].innerHTML = new Date(e['start'] * 1000).getHours();
 
 				ui.getElementsByClassName('stop')[0].innerHTML = new Date(e['stop'] * 1000).getHours();
@@ -88,31 +88,14 @@
 				t.setDate(t.getDate() + 1);
 			}
 		}
-		function _setze_wetter_stunden(daten) {
-			var table = document.getElementById('wetter_stunden');
+		function _setze_wetter_daten(vorhersagedaten, id) {
+			var table = document.getElementById(id);
 			var body_tr = table.getElementsByTagName('tbody')[0].getElementsByTagName('tr');
 			for(var zeile_nr = 0; zeile_nr < body_tr.length; zeile_nr++) {
 				var schwelle = (10 - zeile_nr);// 10..1
 				var td_list = body_tr[zeile_nr].getElementsByTagName('td');
 				for(var spalte_nr = 0; spalte_nr < td_list.length; spalte_nr++) {
-					var wert = daten['solarstrahlung_stunden'][spalte_nr] / 100;
-					if(wert >= schwelle) {
-						td_list[spalte_nr].className = "on";
-					} else {
-						td_list[spalte_nr].className = "";
-					}
-				}
-			}
-		}
-		function _setze_wetter_tage(daten) {
-			var table = document.getElementById('wetter_tage');
-			var body_tr = table.getElementsByTagName('tbody')[0].getElementsByTagName('tr');
-			for(var zeile_nr = 0; zeile_nr < body_tr.length; zeile_nr++) {
-				var schwelle = (10 - zeile_nr);// 10..1
-				var td_list = body_tr[zeile_nr].getElementsByTagName('td');
-				for(var spalte_nr = 0; spalte_nr < td_list.length; spalte_nr++) {
-					var wert = daten['solarstrahlung_tage'][spalte_nr] / 100;
-					if(wert >= schwelle) {
+					if(vorhersagedaten[spalte_nr] / 10 >= schwelle) {
 						td_list[spalte_nr].className = "on";
 					} else {
 						td_list[spalte_nr].className = "";
@@ -336,7 +319,7 @@
 			text-align: center;
 		}
 			#steuerung button {
-				font-size: 1.5rem;
+				font-size: 2.5rem;
 				font-weight: bold;
 			}
 			#steuerung button.aktiv {
@@ -383,9 +366,9 @@
 
 <div id="steuerung">
 	Automatik:
-	<button class="aktiv">Auto</button>
-	<button>Warmwasser</button>
-	<button>Heizung</button>
+	<button>Auto</button>
+	<button class="aktiv">Wass</button>
+	<button>Heiz</button>
 </div>
 
 </body>
