--- a/code/htdocs/index.html
+++ b/code/htdocs/index.html
@@ -350,8 +350,8 @@
 </div>
 
 <div class="verteilung_hinweis">
-	Nord-Ost = <span id="solaranteil_in_prozent_string1">40</span>%,
-	S&uumld-West = <span id="solaranteil_in_prozent_string2">20</span>%
+	Nord-Ost = <span id="solaranteil_in_prozent_string1"></span>%,
+	S&uumld-West = <span id="solaranteil_in_prozent_string2"></span>%
 </div>
 
 <table class="wetter" id="wetter_stunden"></table>
