Slorstrahlung korrekt gesetzt

--- a/code/htdocs/index.html
+++ b/code/htdocs/index.html
@@ -293,13 +293,13 @@
 		#verbrauchshinweise {
 			margin-top: 0.2rem;
 			text-align: center;
-			font-size: 1.2rem;
+			font-size: 2.0rem;
 		}
 			#verbrauchshinweise .start,
 			#verbrauchshinweise .stop,
 			#verbrauchshinweise .leistung {
 				font-weight: bold;
-				font-size: 1.5rem;
+				font-size: 3.0rem;
 			}
 			#verbrauchshinweise .stop:after {
 				content: "00";
@@ -365,8 +365,7 @@
 <div id="verbrauchshinweise"></div>
 
 <div id="steuerung">
-	Automatik:
-	<button>Auto</button>
+	<button>Auto&nbsp;<span id="auto_ladestand">64%</span></button>
 	<button class="aktiv">Wass</button>
 	<button>Heiz</button>
 </div>
